--- a/pages/Main.html
+++ b/pages/Main.html
@@ -9,8 +9,8 @@
 
     <link rel="icon" href="../Images/CSULALogo.png">
 
-    <link rel="stylesheet" href="../css/main-styles.css">
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
+    <link rel="stylesheet" href="../css/main-styles.css">
     <link rel="stylesheet" href="../css/global-styles.css">
 
     <script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>
@@ -35,13 +35,13 @@
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="Main.html">Home</a></li>
+                        <li class="active-tab"><a href="Main.html">Home</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="officers.html">Officers</a></li>
                         <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                        <li class="dropdown active-tab">
+                        <li class="dropdown">
                             <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">
                                 Contact<span class="caret"></span>
