--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,11 +23,11 @@
                 <ul class="nav navbar-nav">
                     <li><a href="Main.html">Home</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li class="active-tab"><a href="projects.html">Projects</a></li>
                     <li><a href="officers.html">Officers</a></li>
                     <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                    <li class="dropdown active-tab">
+                    <li class="dropdown">
                         <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">
                             Contact<span class="caret"></span>
